--- a/index.html
+++ b/index.html
@@ -64,17 +64,19 @@
       document.getElementById('result').innerText = 'กำลังส่งข้อมูล...';
       
       try {
+        // สร้าง form data แทน JSON
+        const params = new URLSearchParams();
+        params.append('line_user_id', lineUserId);
+        params.append('employee_id', document.getElementById('employee_id').value);
+        params.append('customer_name', document.getElementById('customer_name').value);
+        params.append('email', document.getElementById('email').value);
+        params.append('group', document.getElementById('group').value);
+        params.append('role', 'user');
+
         const response = await fetch('https://script.google.com/macros/s/AKfycbwaiZAn4XCbalh9sg_2oPbPyeQP9_2CTnNQ_sWH_eqeHSXBafzlVCF9lb4P-tXhruCrhw/exec', {
           method: 'POST',
-          body: JSON.stringify({
-            line_user_id: lineUserId,
-            employee_id: document.getElementById('employee_id').value,
-            customer_name: document.getElementById('customer_name').value,
-            email: document.getElementById('email').value,
-            group: document.getElementById('group').value,
-            role: 'user'
-          }),
-          headers: { 'Content-Type': 'application/json' }
+          body: params
+          // ไม่ต้องใส่ Content-Type header browser จะใส่ให้เอง
         });
         
         if (!response.ok) {
