--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           throw new Error(`HTTP ${response.status}: ${response.statusText}`);
         }
         const data = await response.json();
+        if (data.result === 'duplicate') {
+          document.getElementById('result').innerText = 'คุณลงทะเบียนไปแล้ว หรือรหัสพนักงานนี้ถูกใช้แล้ว';
+          return;
+        }
+        const data = await response.json();
         document.getElementById('result').innerText = 'ลงทะเบียนสำเร็จ!';
         setTimeout(() => {
           if (liff.isInClient()) {
