--- a/fb.html
+++ b/fb.html
@@ -6,7 +6,7 @@
 <body>
 
 <div id="login-section">
-  <button onclick="FB.login(checkLoginState, {scope: 'email'})">Login with Facebook</button>
+  <button id="fb-login-btn">Login with Facebook</button>
 </div>
 
 <div id="form-section" style="display:none;">
@@ -22,10 +22,14 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '691055147131199', // เปลี่ยนเป็น App ID ของคุณ
+      appId      : '691055147131199', // App ID ของคุณ
       cookie     : true,
       xfbml      : true,
       version    : 'v17.0'
+    });
+
+    document.getElementById('fb-login-btn').addEventListener('click', function() {
+      FB.login(checkLoginState, {scope: 'email'});
     });
   };
 
@@ -37,30 +41,33 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 
-  function checkLoginState() {
-    FB.getLoginStatus(function(response) {
-      if (response.status === 'connected') {
-        FB.api('/me', {fields: 'name,email,id'}, function(response) {
-          document.getElementById('fb-name').textContent = response.name;
-          document.getElementById('fb-email').textContent = response.email || 'ไม่มีอีเมล';
-          document.getElementById('login-section').style.display = 'none';
-          document.getElementById('form-section').style.display = 'block';
+  function checkLoginState(response) {
+    if (response.status === 'connected') {
+      FB.api('/me', {fields: 'name,email,id'}, function(response) {
+        document.getElementById('fb-name').textContent = response.name;
+        document.getElementById('fb-email').textContent = response.email || 'ไม่มีอีเมล';
+        document.getElementById('login-section').style.display = 'none';
+        document.getElementById('form-section').style.display = 'block';
 
-          // เก็บข้อมูล id, name, email ไว้ใช้ส่ง
-          window.fbUserData = {
-            meta_user_id: response.id,
-            customer_display: response.name,
-            email: response.email || ''
-          };
-        });
-      } else {
-        alert('กรุณาเข้าสู่ระบบ Facebook ก่อน');
-      }
-    });
+        window.fbUserData = {
+          meta_user_id: response.id,
+          customer_display: response.name,
+          email: response.email || ''
+        };
+      });
+    } else {
+      alert('กรุณาเข้าสู่ระบบ Facebook ก่อน');
+    }
   }
 
   document.getElementById('user-form').addEventListener('submit', function(e) {
     e.preventDefault();
+
+    if (!window.fbUserData) {
+      alert('กรุณาเข้าสู่ระบบ Facebook ก่อน');
+      return;
+    }
+
     const phone = document.getElementById('phone').value;
     const data = {
       meta_user_id: window.fbUserData.meta_user_id,
@@ -79,7 +86,6 @@
     .then(res => res.json())
     .then(result => {
       alert('ส่งข้อมูลเรียบร้อยแล้ว ขอบคุณครับ');
-      // อาจจะ redirect หรือซ่อนฟอร์มได้ที่นี่
       document.getElementById('form-section').style.display = 'none';
     })
     .catch(err => {
