--- a/fb.html
+++ b/fb.html
@@ -1,79 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Facebook Login + Form</title>
+  <title>กรอกข้อมูลติดต่อ</title>
 </head>
 <body>
 
-<div id="login-section">
-  <button id="fb-login-btn">Login with Facebook</button>
-</div>
-
-<div id="form-section" style="display:none;">
-  <h3>กรุณากรอกข้อมูลเพิ่มเติม</h3>
-  <form id="user-form">
-    <label>ชื่อ: <span id="fb-name"></span></label><br>
-    <label>อีเมล: <span id="fb-email"></span></label><br><br>
-    <label>เบอร์โทรศัพท์: <input type="text" id="phone" name="phone" required></label><br><br>
-    <button type="submit">ส่งข้อมูล</button>
-  </form>
-</div>
+<h3>กรุณากรอกข้อมูลติดต่อ</h3>
+<form id="contact-form">
+  <label>Meta User ID: <input type="text" id="meta_user_id" name="meta_user_id" required></label><br><br>
+  <label>อีเมล: <input type="email" id="email" name="email" required></label><br><br>
+  <label>เบอร์โทรศัพท์: <input type="tel" id="telephone" name="telephone" required></label><br><br>
+  <button type="submit">ส่งข้อมูล</button>
+</form>
 
 <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '691055147131199', // App ID ของคุณ
-      cookie     : true,
-      xfbml      : true,
-      version    : 'v17.0'
-    });
-
-    document.getElementById('fb-login-btn').addEventListener('click', function() {
-      FB.login(checkLoginState, {scope: 'email'});
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-
-  function checkLoginState(response) {
-    if (response.status === 'connected') {
-      FB.api('/me', {fields: 'name,email,id'}, function(response) {
-        document.getElementById('fb-name').textContent = response.name;
-        document.getElementById('fb-email').textContent = response.email || 'ไม่มีอีเมล';
-        document.getElementById('login-section').style.display = 'none';
-        document.getElementById('form-section').style.display = 'block';
-
-        window.fbUserData = {
-          meta_user_id: response.id,
-          customer_display: response.name,
-          email: response.email || ''
-        };
-      });
-    } else {
-      alert('กรุณาเข้าสู่ระบบ Facebook ก่อน');
-    }
-  }
-
-  document.getElementById('user-form').addEventListener('submit', function(e) {
+  document.getElementById('contact-form').addEventListener('submit', function(e) {
     e.preventDefault();
 
-    if (!window.fbUserData) {
-      alert('กรุณาเข้าสู่ระบบ Facebook ก่อน');
-      return;
-    }
-
-    const phone = document.getElementById('phone').value;
     const data = {
-      meta_user_id: window.fbUserData.meta_user_id,
-      customer_display: window.fbUserData.customer_display,
-      email: window.fbUserData.email,
-      telephone: phone
+      meta_user_id: document.getElementById('meta_user_id').value.trim(),
+      email: document.getElementById('email').value.trim(),
+      telephone: document.getElementById('telephone').value.trim()
     };
 
     fetch('https://script.google.com/macros/s/AKfycbxxvzCrsAl7xDTsFDA1mQrc5-3KNV1lmtRvrdZInWCe2uVqdZ9F5LituFowTBQD7zMSFQ/exec', {
@@ -86,7 +33,7 @@
     .then(res => res.json())
     .then(result => {
       alert('ส่งข้อมูลเรียบร้อยแล้ว ขอบคุณครับ');
-      document.getElementById('form-section').style.display = 'none';
+      document.getElementById('contact-form').reset();
     })
     .catch(err => {
       alert('เกิดข้อผิดพลาดในการส่งข้อมูล');
