--- a/fb.html
+++ b/fb.html
@@ -1,46 +1,178 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>กรอกข้อมูลติดต่อ</title>
+  <title>กรอกข้อมูลติดต่อ Facebook</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body { 
+      font-family: Arial, sans-serif; 
+      padding: 15px; 
+      margin: 0;
+      font-size: 16px;
+      line-height: 1.4;
+      background-color: #f8f9fa;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 25px;
+      font-size: 24px;
+    }
+    form {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    input, select { 
+      width: 100%; 
+      padding: 15px; 
+      margin: 8px 0 15px 0; 
+      border: 2px solid #ddd;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: border-color 0.3s;
+    }
+    input:focus, select:focus {
+      outline: none;
+      border-color: #1877F2; /* Facebook blue */
+    }
+    button { 
+      width: 100%; 
+      padding: 18px; 
+      background-color: #1877F2; /* Facebook blue */
+      color: white; 
+      border: none; 
+      border-radius: 8px;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin-top: 10px;
+    }
+    button:hover {
+      background-color: #145dbf;
+    }
+    button:active {
+      background-color: #0f4a94;
+    }
+    #result {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      text-align: center;
+      font-size: 16px;
+      font-weight: bold;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      min-height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .success {
+      color: #1877F2;
+      background-color: #e6f0ff;
+    }
+    .error {
+      color: #ff4444;
+      background-color: #fff0f0;
+    }
+    .warning {
+      color: #ff8800;
+      background-color: #fff8f0;
+    }
+    
+    /* สำหรับหน้าจอเล็ก */
+    @media (max-width: 480px) {
+      body {
+        padding: 10px;
+        font-size: 14px;
+      }
+      h1 {
+        font-size: 20px;
+        margin-bottom: 20px;
+      }
+      form {
+        padding: 15px;
+      }
+      input, select {
+        padding: 12px;
+        font-size: 16px; /* ป้องกัน zoom ใน iOS */
+      }
+      button {
+        padding: 15px;
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
 <body>
 
-<h3>กรุณากรอกข้อมูลติดต่อ</h3>
-<form id="contact-form">
-  <label>Meta User ID: <input type="text" id="meta_user_id" name="meta_user_id" required></label><br><br>
-  <label>อีเมล: <input type="email" id="email" name="email" required></label><br><br>
-  <label>เบอร์โทรศัพท์: <input type="tel" id="telephone" name="telephone" required></label><br><br>
-  <button type="submit">ส่งข้อมูล</button>
-</form>
+  <h1>กรุณากรอกข้อมูลติดต่อ</h1>
+  <form id="contact-form">
+    <input type="hidden" id="meta_user_id" name="meta_user_id" required>
+    
+    <label>อีเมล: <input type="email" id="email" name="email" placeholder="example@mail.com" required></label><br>
+    <label>เบอร์โทรศัพท์: <input type="tel" id="telephone" name="telephone" placeholder="0812345678" required></label><br>
+    <button type="submit">ส่งข้อมูล</button>
+  </form>
 
-<script>
-  document.getElementById('contact-form').addEventListener('submit', function(e) {
-    e.preventDefault();
+  <div id="result"></div>
 
-    const data = {
-      meta_user_id: document.getElementById('meta_user_id').value.trim(),
-      email: document.getElementById('email').value.trim(),
-      telephone: document.getElementById('telephone').value.trim()
-    };
+  <script>
+    // ฟังก์ชันอ่านค่า query parameter จาก URL
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
 
-    fetch('https://script.google.com/macros/s/AKfycbxxvzCrsAl7xDTsFDA1mQrc5-3KNV1lmtRvrdZInWCe2uVqdZ9F5LituFowTBQD7zMSFQ/exec', {
-      method: 'POST',
-      body: JSON.stringify(data),
-      headers: {
-        'Content-Type': 'application/json'
+    window.addEventListener('DOMContentLoaded', () => {
+      const metaUserId = getQueryParam('meta_user_id');
+      if (!metaUserId) {
+        alert('ไม่พบข้อมูล meta_user_id');
+        // อาจจะปิดฟอร์มหรือแจ้ง user
+      } else {
+        document.getElementById('meta_user_id').value = metaUserId;
       }
-    })
-    .then(res => res.json())
-    .then(result => {
-      alert('ส่งข้อมูลเรียบร้อยแล้ว ขอบคุณครับ');
-      document.getElementById('contact-form').reset();
-    })
-    .catch(err => {
-      alert('เกิดข้อผิดพลาดในการส่งข้อมูล');
-      console.error(err);
     });
-  });
-</script>
+
+    document.getElementById('contact-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const resultDiv = document.getElementById('result');
+      resultDiv.textContent = 'กำลังส่งข้อมูล...';
+      resultDiv.className = '';
+
+      const data = {
+        meta_user_id: document.getElementById('meta_user_id').value.trim(),
+        email: document.getElementById('email').value.trim(),
+        telephone: document.getElementById('telephone').value.trim()
+      };
+
+      fetch('https://script.google.com/macros/s/AKfycbxxvzCrsAl7xDTsFDA1mQrc5-3KNV1lmtRvrdZInWCe2uVqdZ9F5LituFowTBQD7zMSFQ/exec', {
+        method: 'POST',
+        body: JSON.stringify(data),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(res => res.json())
+      .then(result => {
+        resultDiv.textContent = 'ส่งข้อมูลเรียบร้อยแล้ว ขอบคุณครับ';
+        resultDiv.className = 'success';
+        document.getElementById('contact-form').reset();
+      })
+      .catch(err => {
+        resultDiv.textContent = 'เกิดข้อผิดพลาดในการส่งข้อมูล';
+        resultDiv.className = 'error';
+        console.error(err);
+      });
+    });
+  </script>
 
 </body>
 </html>
